--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -12,10 +12,6 @@
         android:orientation="vertical"
         android:background="@color/colorPrimary">
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="40dp"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,113 +20,104 @@
             <Spinner
                 android:id="@+id/tags"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:entries="@array/tags" />
+                android:entries="@array/tags"
+                android:background="@drawable/textview_tags"
+                android:spinnerMode="dialog"/>
 
             <Button
                 android:id="@+id/gen"
-                style="@android:style/Widget.Holo.Light.Button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/button_shape"
                 android:onClick="onClick"
-                android:text="Staart" />
+                android:text="Start"
+                android:textColor="@color/colorText" />
 
             <Spinner
                 android:id="@+id/duration"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:entries="@array/duration" />
+                android:background="@drawable/textview_dur"
+                android:entries="@array/duration"
+                android:textColor="@color/colorText"
+                android:spinnerMode="dialog"/>
 
         </LinearLayout>
 
-        <Space
-            android:id="@+id/space"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="4">
+
+            <Space
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:id="@+id/space"
+                android:onClick="onClick"
+                android:layout_width="1dp"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton16"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_clear"
+                    android:onClick="clear"
+                    android:scaleType="fitEnd"
+                    android:src="@drawable/clear" />
+
+                <ImageButton
+                    android:id="@+id/imageButton15"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_share"
+                    android:onClick="shareBtn"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/share" />
+            </LinearLayout>
+
+            <Space
+                android:id="@+id/shareSpace"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:onClick="shareBtn"
+                android:layout_width="1dp"/>
+
+        </LinearLayout>
+
+
+        <EditText
+            android:id="@+id/ownTag"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:onClick="onClick"/>
+            android:ems="10"
+            android:hint="Свой тег"
+            android:inputType="textPersonName"
+            android:textColor="@color/colorText"
+            android:textColorHint="@color/colorText" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/history"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/ownTag"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Свой тег"
-                android:inputType="textPersonName" />
-            <Space
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_weight="1" />
-
-
-            <ImageButton
-                android:id="@+id/imageButton16"
-                android:layout_width="32dp"
-                android:layout_height="36dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:onClick="clear"
-                android:src="@drawable/clear"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
-            <Space
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/imageButton15"
-                android:layout_width="32dp"
-                android:layout_height="36dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:onClick="shareBtn"
-                android:src="@drawable/icon"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
-
-        </LinearLayout>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="70dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/history"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="History"
-                android:textAlignment="center"
-                android:textSize="30sp"
-                tools:text="History" />
-        </LinearLayout>
+            android:text="History"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            tools:text="History"
+            android:textColor="@color/colorText" />
 
     </LinearLayout>
 
